@@ -1,5 +1,5 @@
 This 'README' file belongs to the "MiKTeX Tools" source distribution
-for UNIX syste-like platforms (GNU/Linux, Mac OS X, ...).
+for UNIX system-like platforms (GNU/Linux, Mac OS X, ...).
 
 
 FIRST THINGS FIRST
